syntax = "proto3";
package proto;
option go_package = "./;proto";

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative iris.proto

service PredictionTask {
  rpc LaunchTask(TaskRequest) returns (TaskResponse){}
}
message TaskRequest {
  string sepal_length = 1;
  string  sepal_width = 2;
  string petal_length = 3;
  string petal_width = 4;
}
message TaskResponse{
  message Result {
    string class = 1;
    string probability = 2;
  }
  repeated Result result = 1;
}

